# crewAI-projects

./: env.sample  readme.md  requirements.txt
01_test_ai/: README.md  pyproject.toml  report.md
01_test_ai/src/test_ai/: crew.py  main.py
02_ai_news/: pyproject.toml
02_ai_news/news/: 25-03-15_13-39-28_Multi_party_computing_news_article.md  25-03-15_13-39-28_Upcoming Events in bangalore_news_article.md  25-03-15_13-39-28_ZK Proofs and AI_news_article.md
02_ai_news/src/ai_news/: crew.py  main.py
02_ai_news/src/ai_news/config/: agents.yaml  tasks.yaml
03_poem_flow/: README.md  pyproject.toml
03_poem_flow/poem/: poem.txt
03_poem_flow/src/poem_flow/: main.py
04_meeting_minutes/: pyproject.toml
04_meeting_minutes/meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
04_meeting_minutes/src/meeting_minutes/: main.py
04_meeting_minutes/src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
04_meeting_minutes/src/meeting_minutes/crews/gmailcrew/tools/: gmail_tool.py  token.json
04_meeting_minutes/src/meeting_minutes/crews/meeting_minutes/: meeting_minutes_crew.py
04_meeting_minutes/src/meeting_minutes/crews/meeting_minutes/config/: tasks.yaml
05_pdf_rag/: pyproject.toml
05_pdf_rag/db/: chroma.sqlite3
05_pdf_rag/src/pdf_rag/: crew.py
06_business_development/: README.md  pyproject.toml
06_business_development/reports/: 2025-03-17_web3_tokenization_platform_report_article.md
06_business_development/src/business_development/: crew.py  main.py
06_business_development/src/business_development/config/: agents.yaml  tasks.yaml
07_sprint_master/: README.md  pyproject.toml
07_sprint_master/reports/: sso_report_article.md  sso_tasks.xlsx
07_sprint_master/src/sprint_master/: crew.py  main.py
07_sprint_master/src/sprint_master/config/: agents.yaml  tasks.yaml
08_product_parallelizer/: README.md  pyproject.toml
08_product_parallelizer/report/: 2025-03-19_VAST DATA PLATFORM_report.md
08_product_parallelizer/src/product_parallelizer/: crew.py  main.py
08_product_parallelizer/src/product_parallelizer/config/: agents.yaml  tasks.yaml
09_project_plan/: README.md  pyproject.toml  report.md
09_project_plan/report/: Website_WebsiteDevelopment_report.md
09_project_plan/src/project_plan/: crew.py  main.py
09_project_plan/src/project_plan/config/: agents.yaml  tasks.yaml
pdf_rag/src/pdf_rag/: main.py
pdf_rag/src/pdf_rag/config/: tasks.yaml
