[project]
name = "test_ai"
version = "0.1.0"
description = "test-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
test_ai = "test_ai.main:run"
run_crew = "test_ai.main:run"
train = "test_ai.main:train"
replay = "test_ai.main:replay"
test = "test_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
