[project]
name = "business_development"
version = "0.1.0"
description = "business_development using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
business_development = "business_development.main:run"
run_crew = "business_development.main:run"
train = "business_development.main:train"
replay = "business_development.main:replay"
test = "business_development.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
