[project]
name = "sprint_master"
version = "0.1.0"
description = "sprint_master using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
sprint_master = "sprint_master.main:run"
run_crew = "sprint_master.main:run"
train = "sprint_master.main:train"
replay = "sprint_master.main:replay"
test = "sprint_master.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
