[project]
name = "project_plan"
version = "0.1.0"
description = "project_plan using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
project_plan = "project_plan.main:run"
run_crew = "project_plan.main:run"
train = "project_plan.main:train"
replay = "project_plan.main:replay"
test = "project_plan.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
